--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ subjects:
 - !lcsh 'Youth -- Conduct of life -- Juvenile fiction'
 - !lcsh 'Courts and courtiers -- Juvenile fiction'
 - !lcsh 'Conduct of life -- Juvenile fiction'
+- GITenberg
 title: Joan of the Sword Hand
 url: http://www.gutenberg.org/ebooks/41803
